--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,9 @@ body{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-
+#menuIcon{
+    display: none;
+}
 
 
 #contact{
@@ -47,3 +49,30 @@ body{
     background-attachment: fixed;
 }
 
+@media (max-width: 768px) {
+    #menuIcon{
+        display: block;
+    }
+    #nav {
+      position: absolute;
+      flex-direction: column;
+      background-color: white;
+      width: 100%;
+      gap: 20px;
+      padding-bottom: 10px;
+      padding-left: 15px;
+      align-items: start;
+      top: -300px;
+      transition: 0.5s;
+    }
+    #logo {
+      position: absolute;
+      left: 0;
+      font-size: 20px;
+      top: 5px;
+    }
+    #nav.active {
+      top: 43px;
+    }
+  }
+  
